# lib

./: .gitignore  Makefile.am  configure.ac
apex/: .gitignore  Makefile.am  README.txt  alfbasismodule.mod  apex.c  apex.h  apex.h.in  apexf77.f  apexsh.f90  apxshmodule.mod  checkapexsh.f90  dat  magfld.f  makeapexsh.f90  test.c
champ/: Makefile.am  gmtplot.sh  mkidx.sh  plot_gd.gp  plot_gd.sh  print.c  print_alt.c  print_alt.sh  print_lt.c  print_plp.c  stage1-all.sh  stage1.c  stage1.sh  stage1_chaos.sh
common/: Makefile.am  ap.c  ap.h  bin.c  bin.h  bin2d.c  bin2d.h  bin3d.c  bin3d.h  bsearch.c  bsearch.h  ccorr.c  ccorr.h  common.c  common.h  coord.c  coord.h  doy2md.c  dst.c  dst.h  eci.c  eci.h  ellipsoid.c  ellipsoid.h  ema.c  ema.h  epoch2str.c  estist2.c  estist2.h  f107.c  f107.h  fday2str.c  fit.c  fit.h  fit2.c  fit2.h  geo.c  geo.h  gsm2geo.c  histogramNd.c  (+52 more)
cond/: Makefile.am  cond.c  cond.h  dat  test.c
dmsp/: Makefile.am  magcal.c  magcal.h  print.c  stage0.c  stage0.sh  stage1-all.sh  stage1.c  stage1.sh  stage2.c  stage2.sh  stage2_filter.c  stage2_quaternions.c  stage2a.c
dmsp/doc/: conf.py  (+3 more)
emm/: Makefile.am  emm_test.c  emm_test.sh  emm_write_core.c
ephemeris/: Makefile.am  eph.c  eph.h  eph_data.c  eph_data.h  hermite.c  hermite.h  print.c  test.c  test_bowman.sh
estist/: Makefile.am  estist_calc.c  estist_calc.h  main.c  process-all.sh  process_final.sh  process_year.sh  test.c  weidelt_dst.f
euler/: .gitignore  MSW_EUL_BOUMME-0.1.txt  Makefile.am  euler.c  euler.h  euler_calc.c  euler_calc.h  euler_swarm.sh  main.c  preproc.c  print.c  test.c  test_quat.c
gd/: Makefile.am  necorr.c  necorrJ.c  plot_corr.gp  xcorr.c
hwm/: Makefile.am  README.txt  alf.mod  checkhwm14.f90  dat  dwm.mod  gd2qdc.mod  hwm.c  hwm.h  hwm.mod  linkhwm.sh  qwm.mod  test.c
invert_eej/: Makefile.am  cfg.c  cfg.h  compare.c  coord.h  corr.c  geod2geoc.c  geod2geoc.h  gmtplot.sh  gmtscat.sh  green.c  green.h  inverteef.c  inverteef.h  lls.c  lls.h  log.c  log.h  mag.c  mag.h  mag_eej.c  mag_grad.c  mag_log.c  mag_log_grad.c  mag_sqfilt.c  mag_sqfilt_scalar.c  mag_sqfilt_vector.c  main.c  mkidx_champ.sh  mkidx_swarm.sh  pde.c  pde.h  pde_common.c  plotF2.gp  plot_dH_talk.gp  process_champ.sh  process_swarm.sh  sigma.c  sigma.h  swarm2champ.c  (+5 more)
iri/: 00_iri2012-License.txt  Makefile.am  cira.for  dat  dlindices.sh  gmtplot.sh  igrf.for  iri.c  iri.h  irifun.for  irisub.for  iritest.for  linkiri.sh  plot_map.c  plot_map.gp  test.c
levmar/: Makefile.am  levmar.c  levmar.h  test.c  test2.c  test_powell.c
lls/: Makefile.am  lls.c  lls.h  lls_complex.c  lls_lapack.c  test.c  test_complex.c  test_shaw.c  test_tsqr.c  tsqr.c  tsqr.h
magdata/: Makefile.am  mag2swarm.c  magdata.c  magdata.h  magdata_list.c  magdata_list.h  preproc.c  preproc_filter.c  print.c  test.c
mageq/: Makefile.am  dat  dat.2000  dat.2005  mageq.c  mageq.h  magpole.c  magpole.h  pole.c  test.c
magfit/: Makefile.am  compare.c  gauss.c  gaussint.c  magfit.c  magfit.h  main.c  pca.c  plot_current.gp  plot_current1d.gp  plot_current1d_pca.gp  plot_current2d_pca.gp  rc.c  secs1d.c  secs2d.c
mfield/: CF.cfg  GeomagnetismHeader.h  Lcurve.sh  MF.cfg  Makefile.am  README  domodel.sh  gmtmap.sh  gmtplot.sh  gmtplot_di.sh  gmtscat.sh  hello.c  lapack_inverse.c  mfield.c  mfield.h  mfield.tex  mfield_ascii.c  mfield_ascii.sh  mfield_compare.c  mfield_covar.c  mfield_dBdt.c  mfield_data.c  mfield_data.h  mfield_emag.c  mfield_euler.c  mfield_eval.c  mfield_eval.h  mfield_eval_main.c  mfield_green.c  mfield_green.h  mfield_main.c  mfield_multifit.c  mfield_nonlinear.c  mfield_plot.c  mfield_plot_ext.c  mfield_preproc.c  mfield_preproc_filter.c  mfield_residuals.c  mfield_sht.c  mfield_sht.h  (+27 more)
msis/: Makefile.am  msis.c  msis.h  nrlmsise00_sub.for  test.c
msynth/: Makefile.am  calc_point.c  extrapolate_epoch.c  grid.c  model_avg.c  msynth.c  msynth.h  msynth.h.in  msynth_arnaud.c  msynth_bggm.c  msynth_chaos.c  msynth_crust.c  msynth_emm.c  msynth_green.c  msynth_grid.c  msynth_grid.h  msynth_igrf.c  msynth_pomme.c  msynth_swarm.c  msynth_tgcm.c  msynth_wmm.c  print_map.c  print_spectrum.c  print_test_values.c  test.c  write_wmm.c
pca/: Makefile.am  io.c  io.h  pca.c  pca.h  pca.h.in  pca_common.c  plot_PC_B.gp  plot_PC_current.gp  plot_eval.gp  plot_maps.c  plot_var.gp  print.c  stage1.c  stage2.c  stage2b.c  stage3.c  stage3b.c  tiegcm.h  tiegcm_alloc.c  tiegcm_read.c  window.c  window.h
pca3d/: Makefile.am  io.c  io.h  pca3d.h.in  pca3d.tex  print.c  print_fft.c  print_modes.c  spectrogram.c  stage2a.c  stage3a.c  tiegcm3d.h  tiegcm3d_alloc.c  tiegcm3d_print.c  tiegcm3d_read.c  window.c  window.h
poltor/: Lcurve.sh  Makefile.am  README  compare_plp.c  gmtplot.sh  gmtscat.sh  invert_main.c  mkidx_champ.sh  mkidx_swarm.sh  plot.c  plot_current.gp  plot_current_shell.gp  plot_diff.gp  plot_diff_grav.gp  plot_plp.gp  plot_tracks.gp  poltor.c  poltor.h  poltor.tex  poltor_nonlinear.c  poltor_preproc.c  poltor_shell.c  poltor_synth.c  poltor_test.h  preproc.c  process1.sh  process2.sh  process3.sh  process_ne.sh  process_ne2.sh
pomme/: Gdef.h  Makefile.am  POMME8_core.h  POMME8_crust.h  POMME8_ext.h  POMME8_gsm2geo.h  POMME8_qfac.h  POMME8_sm2geo.h  geod2geoc.c  gsm2geo.c  int-ext.c  magfdz.c  pomme.c  pomme.h  pomme_calc.c  pomme_mod.h  pomme_wrap.c  test.c  test_ext.c
secs/: Makefile.am  compare.c  main.c  secs1d.c  secs1d.h  test.c
swarm/: Makefile.am  calc_crf2s.c  calc_euler.c  compare.c  crust.c  crustal1.c  doavg.sh  docal.sh  eulersat.c  filter.c  gmtplot.sh  magcal.c  magcal.h  mkidx_swarm.sh  pca_fit.c  plot_euler.gp  plot_euler_crf2s.gp  plot_tracks.c  plotsep.c  print.c  print_all.c  print_alt.c  print_crust.c  print_efi.c  print_eph.c  print_lp.c  print_lt.c  print_tracks.c  residuals.c  stage1-all.sh  stage1.c  stage1.sh  stage1_chaos.sh  swarmcdf2fday.c  testcal.c
tiegcm/: Makefile.am  io.c  io.h  lapack_common.c  lapack_common.h  plot_PC_current.gp  plot_eval.gp  plot_fft.gp  plot_resX.gp  plot_resZ.gp  print.c  stage1.c  stage2.c  stage3.c  tiegcm.h  tiegcm_alloc.c  tiegcm_read.c
(+158 files in other folders)
