# The order of these directories is important, as some
# directories need to be built before others
SUBDIRS =         \
  common          \
  apex            \
  chaos           \
  curvefit        \
  efi             \
  green           \
  grid            \
  iri             \
  julia           \
  lapack_wrapper  \
  levmar          \
  lis             \
  lls             \
  msis            \
  msynth          \
  mageq           \
  peak            \
	secs            \
  superlu         \
  hwm             \
  cond            \
  pomme           \
  track           \
  magdata         \
  euler           \
  estist          \
  champ           \
  poltor          \
  invert_eej      \
  pca             \
  swarm           \
  gd              \
  mfield          
