# The order of these directories is important, as some
# directories need to be built before others
SUBDIRS =         \
  common          \
  apex            \
  chaos           \
  curvefit        \
  efi             \
  green           \
  grid            \
  grobs           \
  iri             \
  julia           \
  lapack_wrapper  \
  lis             \
  lls             \
  msis            \
  msynth          \
  mageq           \
  magfit          \
  peak            \
  superlu         \
  hwm             \
  cond            \
  pomme           \
  track           \
  magdata         \
  euler           \
  estist          \
  champ           \
  poltor          \
  invert_eej      \
  pca             \
  swarm           \
  gd              \
  mfield          
