# The order of these directories is important, as some
# directories need to be built before others
SUBDIRS =         \
  apex            \
  curvefit        \
  efi             \
  ephemeris       \
  green           \
  grid            \
  grobs           \
  iri             \
  julia           \
  lapack_wrapper  \
  lis             \
  lls             \
  msis            \
  mageq           \
  magfit          \
  peak            \
  superlu         \
  hwm             \
  cond            \
  pomme           \
  track           \
  magdata         \
  euler           \
	emm             \
  estist          \
  champ           \
  poltor          \
  invert_eej      \
  pca             \
  swarm           \
  gd              \
  dmsp            \
  mfield          
