AC_INIT([lib], [0.0.1])
AC_CONFIG_SRCDIR([common/common.c])

AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE

AC_CANONICAL_HOST

AC_PROG_CC
AC_PROG_F77
AC_PROG_FC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_CONFIG_FILES([     \
  Makefile            \
  apex/Makefile       \
  champ/Makefile      \
  chaos/Makefile      \
  common/Makefile     \
  cond/Makefile       \
  curvefit/Makefile   \
  efi/Makefile        \
  estist/Makefile     \
  euler/Makefile      \
  gd/Makefile         \
  grid/Makefile       \
  hwm/Makefile        \
  invert_eej/Makefile \
  iri/Makefile        \
  julia/Makefile      \
  levmar/Makefile     \
  lis/Makefile        \
  lls/Makefile        \
  magdata/Makefile    \
  mageq/Makefile      \
  msis/Makefile       \
  msynth/Makefile     \
  peak/Makefile       \
  poltor/Makefile     \
  pomme/Makefile      \
  swarm/Makefile      \
  track/Makefile      \
])

#AC_CONFIG_FILES([     \
#  Makefile            \
#  apex/Makefile       \
#  champ/Makefile      \
#  champcdf/Makefile   \
#  champ_dH/Makefile   \
#  champ_julia/Makefile \
#  chaos/Makefile      \
#  cnofs/Makefile      \
#  common/Makefile     \
#  cond/Makefile       \
#  corr/Makefile       \
#  corr/corr_files.h   \
#  csparse/Makefile    \
#  ctrans/Makefile     \
#  curvefit/Makefile   \
#  dmsp/Makefile       \
#  drift/Makefile      \
#  drift/drift_files.h \
#  dst_corr/Makefile   \
#  eefm/Makefile       \
#  eefm/eefm_files.h   \
#  efi/Makefile        \
#  elecpot/Makefile    \
#  emm/Makefile        \
#  ephemeris/Makefile  \
#  estist/Makefile     \
#  euler/Makefile      \
#  fdiff/Makefile      \
#  fs/Makefile         \
#  gd/Makefile         \
#  grid/Makefile       \
#  hdgm/Makefile       \
#  hua_piu/Makefile    \
#  hist/Makefile       \
#  hwm/Makefile        \
#  igrf/Makefile       \
#  invert_eej/Makefile \
#  iri/Makefile        \
#  julia/Makefile      \
#  levmar/Makefile     \
#  lis/Makefile        \
#  lls/Makefile        \
#  magcoord/Makefile   \
#  magdata/Makefile    \
#  mageq/Makefile      \
#  magobs/Makefile     \
#  mfield/Makefile     \
#  mhd/Makefile        \
#  modes/Makefile      \
#  msis/Makefile       \
#  msynth/Makefile     \
#  mud/Makefile        \
#  mumps/Makefile      \
#  oersted/Makefile    \
#  pastix/Makefile     \
#  peak/Makefile       \
#  petsc/Makefile      \
#  pde_invert/Makefile \
#  pde_invert.old/Makefile \
#  poltor/Makefile     \
#  pomme/Makefile      \
#  pomme/pomme_files.h \
#  pomme7/Makefile     \
#  pomme8/Makefile     \
#  pomme8.1/Makefile   \
#  sat_tec/Makefile    \
#  shc/Makefile        \
#  spectrum/Makefile   \
#  superlu/Makefile    \
#  swarm/Makefile      \
#  tgcm/Makefile       \
#  track/Makefile      \
#  weimer/Makefile     \
#])

AC_OUTPUT
