AC_INIT([lib], [0.0.2])
AC_CONFIG_SRCDIR([swarm/print.c])

AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE

AC_CANONICAL_HOST

AC_PROG_CC
AC_PROG_F77
AC_PROG_FC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AM_PROG_CC_C_O

AC_SUBST(DATAHOME)

AC_CONFIG_FILES([            \
  Makefile                   \
  champ/Makefile             \
  cond/Makefile              \
  curvefit/Makefile          \
  dmsp/Makefile              \
  efi/Makefile               \
  emm/Makefile               \
  ephemeris/Makefile         \
  estist/Makefile            \
  euler/Makefile             \
  gd/Makefile                \
  green/Makefile             \
  grid/Makefile              \
  grobs/Makefile             \
  hwm/Makefile               \
  invert_eej/Makefile        \
  iri/Makefile               \
  julia/Makefile             \
  julia/julia.h              \
  lapack_wrapper/Makefile    \
  lis/Makefile               \
  lls/Makefile               \
  magdata/Makefile           \
  mageq/Makefile             \
  magfit/Makefile            \
  mfield/Makefile            \
  mserv/Makefile             \
  msis/Makefile              \
  peak/Makefile              \
  poltor/Makefile            \
  pomme/Makefile             \
  superlu/Makefile           \
  swarm/Makefile             \
  pca/Makefile               \
  pca/pca.h                  \
  pca3d/Makefile             \
  track/Makefile             \
])

AC_OUTPUT
