bin_PROGRAMS = emm_test emm_write_core

emm_test_SOURCES = emm_test.c
emm_test_LDADD = -lcommon -lmsynth -lm /home/palken/usr/lib/libgsl.a -lgslcblas

emm_write_core_SOURCES = emm_write_core.c
emm_write_core_LDADD = -lcommon -lmsynth -lm /home/palken/usr/lib/libgsl.a -lgslcblas

AM_CPPFLAGS = -I$(top_builddir)/pomme
